imagem header mais leve

--- a/css/header.css
+++ b/css/header.css
@@ -2,7 +2,7 @@
 
 header{
     display: flex;
-    background-image: url("https://s3-alpha-sig.figma.com/img/803a/7f80/de9c4580100efae8900cc343355c0568?Expires=1570406400&Signature=FT6FXb2pdmEzvDdASh-R~HoTKxhh3rlCVLAVZuF5XqXbRN9n~FROTaxs9FrtO~Jbg9JPEynNQJDmgZFTUde3gm9ghqY2DfAkT9STCnCdYbW~pA1~Z3vy0Hp7Rqxel7jVMShOgUzXT-asIkjLqJvtYniPZXsBXx7gAUB2jqdfnnjbclF5LEkQhX~zPPa4o3jbeyzFiVgmwl3Hrxqx2B8MTONlP5rnyhcPoJBalQBIYMjbCL76UENmrGGichuhyv3odFRrCFpSiZqV6IdWW5yRuwpoCpHpDObCtdbTuOuYoxO-HYI7fW9j~eruSHitohtrUvlTFDSX-r2d9~Pw5X-f0w__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
+    background-image: url("https://csharp-station.com/wp-content/uploads/2019/08/Person-coding-on-laptop-1200x794.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
